[gd_scene load_steps=4 format=3]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="FullscreenCheck" type="CheckBox" parent="."]
text = "Fullscreen"
rect_position = Vector2(20,20)

[node name="ResolutionOption" type="OptionButton" parent="."]
rect_position = Vector2(20,60)

[node name="VsyncCheck" type="CheckBox" parent="."]
text = "VSync"
rect_position = Vector2(20,100)

[node name="QualityOption" type="OptionButton" parent="."]
rect_position = Vector2(20,140)

[node name="FogDensity" type="HSlider" parent="."]
rect_position = Vector2(20,180)
min_value = 0.0
max_value = 1.0

[node name="BloomCheck" type="CheckBox" parent="."]
text = "Bloom"
rect_position = Vector2(20,220)

[node name="MasterVolume" type="HSlider" parent="."]
rect_position = Vector2(300,20)
min_value = -60
max_value = 0

[node name="SfxVolume" type="HSlider" parent="."]
rect_position = Vector2(300,60)
min_value = -60
max_value = 0

[node name="MusicVolume" type="HSlider" parent="."]
rect_position = Vector2(300,100)
min_value = -60
max_value = 0

[node name="AmbientVolume" type="HSlider" parent="."]
rect_position = Vector2(300,140)
min_value = -60
max_value = 0

[node name="TextScale" type="HSlider" parent="."]
rect_position = Vector2(600,20)
min_value = 0.5
max_value = 2.0

[node name="ColorblindOption" type="OptionButton" parent="."]
rect_position = Vector2(600,60)

[node name="MotionToggle" type="CheckBox" parent="."]
text = "Motion Effects"
rect_position = Vector2(600,100)

[node name="BackButton" type="Button" parent="."]
text = "Back"
rect_position = Vector2(900,20)

[node name="ApplyButton" type="Button" parent="."]
text = "Apply"
rect_position = Vector2(900,60)

[ext_resource path="res://scripts/ui/options_menu.gd" type="Script" id=1]